--- a/pom.xml
+++ b/pom.xml
@@ -5,23 +5,29 @@
     <packaging>pom</packaging>
     <modules>
         <module>mail-common</module>
-        <module>mail-account</module>
         <module>mail-service</module>
+        <module>mail-account</module>
+        <module>mybatis_generator</module>
     </modules>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.5.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.islet</groupId>
     <artifactId>mail</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mail</name>
     <description>邮箱密取</description>
+
     <properties>
         <java.version>1.8</java.version>
+        <mybatis-plus.version>3.3.0</mybatis-plus.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -32,6 +38,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis-plus.version}</version>
         </dependency>
     </dependencies>
 </project>
