--- a/pom.xml
+++ b/pom.xml
@@ -24,48 +24,8 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <mybatis-plus.version>3.3.0</mybatis-plus.version>
+        <fastjson.version>1.2.60</fastjson.version>
+        <commons-compress.version>1.18</commons-compress.version>
     </properties>
-
-  <!--  <dependencyManagement>
-
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter</artifactId>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-test</artifactId>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.baomidou</groupId>
-                <artifactId>mybatis-plus-boot-starter</artifactId>
-                <version>${mybatis-plus.version}</version>
-            </dependency>
-
-            &lt;!&ndash;LOMBOK对象代码简化插件&ndash;&gt;
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <optional>true</optional>
-            </dependency>
-&lt;!&ndash;
-            &lt;!&ndash;模版引擎&ndash;&gt;
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-freemarker</artifactId>
-            </dependency>
-
-            &lt;!&ndash;数据库连接&ndash;&gt;
-            <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-            </dependency>&ndash;&gt;
-        </dependencies>
-    </dependencyManagement>-->
 
 </project>
