贝叶斯的垃圾邮件分类实现

--- a/mail-service/pom.xml
+++ b/mail-service/pom.xml
@@ -87,6 +87,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.huaban</groupId>
+			<artifactId>jieba-analysis</artifactId>
+			<version>1.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
