--- a/mail-service/pom.xml
+++ b/mail-service/pom.xml
@@ -98,6 +98,11 @@
 			<artifactId>jfreechart</artifactId>
 			<version>1.0.19</version>
 		</dependency>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-core</artifactId>
+			<version>5.7.12</version>
+		</dependency>
 	</dependencies>
 
 	<build>
