--- a/mail-service/pom.xml
+++ b/mail-service/pom.xml
@@ -66,9 +66,8 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-			<version>2.0.1.Final</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<!--aop-->
 		<dependency>
